<resources>
    <string name="app_name">Storygram</string>
    <string name="text_hint_enter_password">Enter your password</string>
    <string name="text_register">Sign Up</string>
    <string name="text_hint_enter_email">Enter your email</string>
    <string name="text_hint_enter_name">Enter your name</string>
    <string name="text_to_login">Join us before? <font color='#FF672C'><b>Login</b></font></string>
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="text_to_register">Dont have account yet? <font color='#FF672C'><b>Register</b></font></string>
    <string name="button_intent_camera">Camera</string>
    <string name="button_intent_gallery">Gallery</string>
    <string name="text_story_description">Add your story description</string>
    <string name="text_description">Description</string>
    <string name="text_username">Username</string>
    <string name="menu_logout">Logout</string>
    <string name="text_password_error">Password must more than 6 character</string>
    <string name="text_email_error">Email format not valid</string>
    <string name="text_name_error">Must be filled</string>
    <string name="button_upload_story">Upload Story</string>
    <string name="title_add_story">Add Story</string>
    <string name="text_choose_picture">Choose a picture</string>
    <string name="text_upload_date">Upload date</string>
    <string name="text_msg_success_created_account">Account successfully registered</string>
    <string name="text_msg_failed_created_account">Failed register account</string>
    <string name="text_title_dialog">Logout</string>
    <string name="text_message_dialog">Do you want to logout?</string>
    <string name="text_positive_dialog">Yes</string>
    <string name="text_negative_dialog">No</string>
    <string name="text_msg_success_add_story">Success upload photo</string>
    <string name="text_msg_failed_add_story">Failed upload photo</string>
    <string name="text_msg_permission">Can\'t get permission</string>
    <string name="title_detail_story">Detail Story</string>
    <string name="text_msg_login_success">Login success</string>
    <string name="text_msg_login_failed">Login failed</string>
</resources>