<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.addstory.AddStoryActivity">

        <ImageView
            android:id="@+id/preview_iv_story"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:background="@color/bg_app_darker_white"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_intent_camera"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_42sdp"
            android:layout_margin="@dimen/_16sdp"
            android:backgroundTint="@color/primary_color"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/button_intent_camera"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_10sdp"
            app:layout_constraintEnd_toStartOf="@+id/btn_intent_gallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/preview_iv_story" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_intent_gallery"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_42sdp"
            android:layout_margin="@dimen/_16sdp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/primary_color"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/button_intent_gallery"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_intent_camera"
            app:layout_constraintTop_toBottomOf="@+id/preview_iv_story" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/btn_intent_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <id.allana.storyapp_submission.util.customview.CustomEditTextName
                android:id="@+id/et_description_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:background="@color/bg_app_darker_white"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/text_story_description"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/font_black_color" />

            <ProgressBar
                android:id="@+id/pb_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:visibility="invisible"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_upload_story"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_42sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:backgroundTint="@color/primary_color"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/button_upload_story"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:cornerRadius="@dimen/_10sdp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
