<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_story"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_story"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitCenter"
                tools:srcCompat="@tools:sample/avatars"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_upload_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/text_upload_date"
                android:textColor="@color/font_black_color"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/text_username"
                android:textColor="@color/font_black_color"
                android:textSize="@dimen/_18ssp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/text_description"
                android:textColor="@color/font_black_color"
                android:textSize="@dimen/_14ssp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="iv_story,tv_upload_date,tv_username,tv_description" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>