<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app_white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_login_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:src="@drawable/ic_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/button_login"
                android:textColor="@color/font_primary_color"
                android:textSize="@dimen/_24ssp"
                android:alpha="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_login_page" />

            <LinearLayout
                android:id="@+id/ll_login_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_login">

                <id.allana.storyapp_submission.util.customview.CustomEditTextEmail
                    android:id="@+id/ed_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@color/bg_app_darker_white"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/text_hint_enter_email"
                    android:padding="@dimen/_12sdp"
                    android:alpha="0"
                    android:textColor="@color/font_black_color" />

                <id.allana.storyapp_submission.util.customview.CustomEditTextPassword
                    android:id="@+id/ed_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@color/bg_app_darker_white"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/text_hint_enter_password"
                    android:padding="@dimen/_12sdp"
                    android:alpha="0"
                    android:textColor="@color/font_black_color" />

                <ProgressBar
                    android:id="@+id/pb_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:visibility="invisible"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_password"
                    tools:visibility="visible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42sdp"
                    android:backgroundTint="@color/primary_color"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/button_login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:textAllCaps="false"
                    android:alpha="0"
                    app:cornerRadius="@dimen/_10sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_text_navigate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_login_page">

                <TextView
                    android:id="@+id/tv_navigate_to_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_to_register"
                    android:textColor="@color/font_black_color"
                    android:textSize="@dimen/_10ssp"
                    android:alpha="0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_login_page" />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>